# pyama-rust

./: .gitignore  Cargo.toml  Dioxus.toml  PRIMITIVES.md  README.md  USAGE_GUIDE.md
assets/styling/: main.css
examples/: generate_6d.rs  load_6d.rs
prototype/: index.html
src/: lib.rs  main.rs
src/components/: buttons.rs  detail_panel.rs  mod.rs  pattern_cell.rs  sidebar.rs  top_bar.rs  traces_pane.rs  types.rs  viewer_pane.rs
src/io/: array_6d.rs  formats.rs  generators.rs  mod.rs
src/routes/: mod.rs
src/services/: data_loader.rs  file_dialog.rs  mod.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
src/ui/components/button/: mod.rs
src/ui/components/button/variants/main/: mod.rs  style.css
src/ui/components/data_panel/: mod.rs
src/ui/components/dropdown/: mod.rs
src/ui/components/dropdown/variants/main/: mod.rs  style.css
src/ui/components/input/: mod.rs
src/ui/components/input/variants/main/: mod.rs  style.css
src/ui/components/separator/: mod.rs
src/ui/components/separator/variants/main/: mod.rs  style.css
src/ui/components/viewer_panel/: mod.rs
src/ui/views/: main_app.rs  mod.rs  welcome_screen.rs
src/utils/: mod.rs
src/views/: main_app.rs  mod.rs  welcome_screen.rs
